cmake_minimum_required(VERSION 3.5)

project(MAIN VERSION 0.1 LANGUAGES CXX)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

#set(CMAKE_AUTOUIC ON)
#set(CMAKE_AUTOMOC ON)
#set(CMAKE_AUTORCC ON)

set(CMAKE_PREFIX_PATH "C:/Qt/6.5.2/msvc2019_64")

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Network Sql)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Network Sql)

set(PROJECT_SOURCES main.cpp)
set(PROJECT_HEADERS 
	lib/sql.hpp
	lib/network.hpp
)

add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS})
#if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
#	qt_add_executable(${PROJECT_NAME} MANUAL_FINALIZATION ${PROJECT_SOURCES})
#else()
#	add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} )
#endif()

target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Network Qt${QT_VERSION_MAJOR}::Sql)

#set_target_properties(${PROJECT_NAME} PROPERTIES
#    ${BUNDLE_ID_OPTION}
#    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
#    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
#    MACOSX_BUNDLE TRUE
#    WIN32_EXECUTABLE TRUE
#)

#include(GNUInstallDirs)
#install(TARGETS ${PROJECT_NAME}
#    BUNDLE DESTINATION .
#    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
#    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
#)

#if(QT_VERSION_MAJOR EQUAL 6)
#	qt_finalize_executable(${PROJECT_NAME})
##endif()
